prova caricamento online backOffice

--- a/backOffice/animal.html
+++ b/backOffice/animal.html
@@ -124,14 +124,21 @@
 
                   <div class="row mb-2">
                     <label class="col-sm-2 col-form-label">Breed</label>
+                    <div class="col">
+                      <input id="inputBreed" type="text" class="form-control" placeholder="Breed" aria-label="Breed">
+                    </div>
+                    <div class="col">
+                        <div class="input-group">
+                            <span class="input-group-text">Price</span>
+                            <input type="number" id="inputPrice" class="form-select" aria-label="Price">
+                        </div> 
+                    </div>
+                  </div> 
+                  <div class="row mb-2">
+                    <label class="col-sm-2 col-form-label">Breed</label>
                     <div class="col-sm-10">
                       <input id="inputBreed" type="text" class="form-control" placeholder="Breed" aria-label="Breed">
                     </div>
-                  </div>
-  
-                  <div class="mb-2">
-                    <label for="inputDescription" class="form-label">Description</label>
-                    <textarea class="form-control" id="inputDescription" rows="2" aria-label="Description of the animal"></textarea>
                   </div>
   
                   <div class="mb-2">
