caricamento back Office

--- a/backOffice/animal.html
+++ b/backOffice/animal.html
@@ -13,7 +13,7 @@
       <title>Animal Shop</title>
     </head>
     <body>
-      <nav class="navbar navbar-expand-lg navbar-light" style="background-color: rgb(236, 227, 205);">
+      <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #472D2D;">
         <div class="container-fluid">
           <a class="navbar-brand" href="home.html">Animal House</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,22 +25,25 @@
                 <a class="nav-link" href="user.html">Costumer Data</a>
               </li>
               <li class="nav-animal">
-                <a class="nav-link" href="item.html">E-commerce Management</a>
+                <a class="nav-link" href="staff.html">Staff Data</a>
               </li>
               <li class="nav-animal">
-                <a class="nav-link" href="animal.html" style="color: rgb(103, 73, 54); font-size: large">Animal Shop</a>
+                <a class="nav-link" href="item.html">E-commerce</a>
+              </li>
+              <li class="nav-animal">
+                <a class="nav-link" href="animal.html" style="color: white; font-size: large">Animal Shop</a>
               </li>
               <li class="nav-animal">
                 <a class="nav-link" href="service.html">Services</a>
+              </li>
+              <li class="nav-animal">
+                <a class="nav-link" href="reservation.html">Reservations</a>
               </li>
               <li class="nav-animal">
                 <a class="nav-link" href="bacheca.html">Boards Management</a>
               </li>
               <li class="nav-animal">
                 <a class="nav-link" href="location.html">Locations</a>
-              </li>
-              <li class="nav-animal">
-                <a class="nav-link" href="staff.html">Staff Management</a>
               </li>
               <li class="nav-animal" >
                 <a class="nav-link" href="#" onclick=logout()>Logout</a>
