--- a/backOffice/location.html
+++ b/backOffice/location.html
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: rgb(236, 227, 205);">
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #472D2D;">
       <div class="container-fluid">
         <a class="navbar-brand" href="home.html">Animal House</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -22,7 +22,10 @@
               <a class="nav-link" href="user.html">Costumer Data</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="item.html">E-commerce Management</a>
+              <a class="nav-link" href="staff.html">Staff Data</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="item.html">E-commerce</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="animal.html">Animal Shop</a>
@@ -31,13 +34,13 @@
               <a class="nav-link" href="service.html">Services</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="reservation.html">Reservations</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="bacheca.html">Boards Management</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="location.html" style="color: rgb(103, 73, 54); font-size: large">Locations</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="staff.html">Staff Management</a>
+              <a class="nav-link" href="location.html" style="color: white; font-size: large">Locations</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#" onclick=logout()>Logout</a>
@@ -57,7 +60,7 @@
         <button type="button" class="btn " style="border-color: rgb(103, 73, 54);" onclick=searchByName()>search</button>
       </div>
 
-      <div  id="myDIV" class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-5   g-4">
+      <div  id="myDIV" class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4">
         <!-- LOCATION'S CARDS -->
       </div>
       
