--- a/backOffice/login.html
+++ b/backOffice/login.html
@@ -6,12 +6,12 @@
 
         <title>Log In Dipendenti</title>
     </head>
-    <body  style="background-color: rgb(103, 73, 54); display: flex;
+    <body  style="background-color: #472D2D; display: flex;
     justify-content: center;
     align-items: center;">
 
         <div class="d-flex justify-content-center" >
-        <div class="card text-center " style="background-color: rgb(236, 227, 205);">
+        <div class="card text-center " style="background-color: #A77979;">
             <div class="card-header">
                 <h2 class="card-title">Login as an Employee</h2>
             </div>
@@ -20,7 +20,7 @@
                 <form action="/login" method="POST">
                     <input id="usernameAuth" class="form-control mb-2" style="display:inline" type="text" name="username" placeholder="username" required>
                     <input id="passwordAuth" class="form-control  mb-4" style="display:inline" type="password" name="password" placeholder="password" required>
-                    <a href="#" class="btn" style="display:inline; background-color: rgb(103, 73, 54); color: rgb(236, 227, 205);" onclick=login()>login</a>
+                    <a href="#" class="btn" style="display:inline; background-color: #472D2D; color: #A77979;" onclick=login()>login</a>
                 </form>
             </div>
             <div class="card-footer text-muted" id="clock">
