--- a/backOffice/order.html
+++ b/backOffice/order.html
@@ -9,12 +9,12 @@
     <title>Orders</title>
   </head>
 
-  <body>
-    <div  class="container"> 
+  <body style="background-color: #A77979;">
+    <div  class="container" > 
       <p class="mt-2" id="titlePag" class="my-2 mx-2" style="font-size: 25px; text-align: center;" ></p>
 
 
-      <div  class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3 " id="myDIV">
+      <div  class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-3 " id="myDIV" >
         <!-- ORDER'S CARDS -->
       </div>
       
