--- a/backOffice/bacheca.html
+++ b/backOffice/bacheca.html
@@ -7,7 +7,7 @@
     <title>Boards Management</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: rgb(236, 227, 205);">
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #472D2D;">
       <div class="container-fluid">
         <a class="navbar-brand" href="home.html">Animal House</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -19,7 +19,10 @@
               <a class="nav-link" href="user.html">Costumer Data</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="item.html">E-commerce Management</a>
+              <a class="nav-link" href="staff.html">Staff Data</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="item.html">E-commerce</a>
             </li>            
             <li class="nav-item">
               <a class="nav-link" href="animal.html">Animal Shop</a>
@@ -28,13 +31,13 @@
               <a class="nav-link" href="service.html">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="bacheca.html" style="color: rgb(103, 73, 54); font-size: large">Boards Management</a>
+              <a class="nav-link" href="reservation.html">Reservations</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="bacheca.html" style="color: white; font-size: large">Boards Management</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="location.html">Locations</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="staff.html">Staff Management</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#" onclick=logout()>Logout</a>
