--- a/backOffice/item.html
+++ b/backOffice/item.html
@@ -10,10 +10,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <link href="style.css" rel="stylesheet" type="text/css">
         
-    <title>E-commerce Management</title>
+    <title>E-commerce</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: rgb(236, 227, 205);">
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #472D2D;">
       <div class="container-fluid">
         <a class="navbar-brand" href="home.html">Animal House</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,7 +25,10 @@
               <a class="nav-link" href="user.html">Costumer Data</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="item.html" style="color: rgb(103, 73, 54); font-size: large">E-commerce Management</a>
+              <a class="nav-link" href="staff.html">Staff Data</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="item.html" style="color: white; font-size: large">E-commerce</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="animal.html">Animal Shop</a>
@@ -34,13 +37,13 @@
               <a class="nav-link" href="service.html">Services</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="reservation.html">Reservations</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="bacheca.html">Boards Management</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="location.html">Locations</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="staff.html">Staff Management</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#" onclick=logout()>Logout</a>
