--- a/backOffice/reservation.html
+++ b/backOffice/reservation.html
@@ -1,22 +1,16 @@
-<!--Servizi:
-Anagrafica Clienti: per gestire le informazioni sui clienti: registrazione, login, cambio password, reset password, cancellazione, preferenze e animali preferiti, punteggi dei giochi 
-Servizi di comunità: per controllare o cancellare i messaggi nelle bacheche
-Gestione e-commerce: per aggiungere e togliere prodotti, prezzi, descrizioni. Ogni prodotto appartiene ad una categoria (e ad una o più sottocategorie) ha sempre un'immagine (con URI online o uploadata sul file system del server)
-Servizi in presenza: per prenotare servizi in presenza, modificare o cancellare prenotazioni, visualizzare disponibilità. Ogni servizio può avere più calendari separati (ad esempio in una sede posso avere molti veterinari, molte "camere" della pensione, ecc.) 
-(facoltativo:) Servizi online: per prenotare servizi online, modificare o cancellare prenotazioni, controllare disponibilità -->
-
 <html>
     <head>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>   
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+        <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
-        <title>AnimalHouse</title>
+        <title>Reservations</title>
     </head>
     <body>
-      <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #472D2D">
+      <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #472D2D;">
         <div class="container-fluid">
-          <a class="navbar-brand" href="home.html" style="color: white; font-size:x-large;">Animal House</a>
+            <a class="navbar-brand" href="home.html">Animal House</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -38,7 +32,7 @@ Servizi in presenza: per prenotare servizi in presenza, modificare o cancellare 
                 <a class="nav-link" href="service.html">Services</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="reservation.html">Reservations</a>
+                <a class="nav-link" href="reservation.html" style="color: #A77979; font-size: large">Reservations</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="bacheca.html">Boards Management</a>
@@ -54,17 +48,27 @@ Servizi in presenza: per prenotare servizi in presenza, modificare o cancellare 
         </div>
       </nav>
 
-      <h2 class="mt-2" id="welcome" style="text-align: center;"></h2>
+      <div  class="container"> 
+      
+        <div class="col">
+        <h2 class="mt-2" style="text-align: left;">Reservations</h2>
 
-      <div id="myDIV">
-        <!-- DIPENDENTE CARD -->
+        </div>
+
+        <div class="input-group mb-2" style="margin-bottom: 6px;">
+            <input type="search" class="form-control rounded" id="searchReservation" placeholder="Search by Service name or Client name" aria-label="Search" aria-describedby="search-addon">
+            <button type="button" class="btn" style="border-color: #472D2D;" onclick=searchByServiceUsername()>search</button>
+        </div>
+
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4  g-4" id="myDIV">
+            <!-- RESERVATIONS CARDS -->
+        </div>
         
       </div>
 
       <link href="style.css" rel="stylesheet" type="text/css">
-      <script src="home.js"></script> 
-      <script src="image.js"></script>  
-      <script src="tool.js"></script>  
+      <script src="reservation.js"></script> 
+      <script src="tool.js"></script> 
 
 
       </body>
