--- a/backOffice/staff.html
+++ b/backOffice/staff.html
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light " style="background-color: rgb(236, 227, 205);">
+    <nav class="navbar navbar-expand-lg navbar-light " style="background-color: #472D2D;">
       <div class="container-fluid">
         <a class="navbar-brand" href="home.html">Animal House</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -22,7 +22,10 @@
               <a class="nav-link" href="user.html">Costumer Data</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="item.html">E-commerce Management</a>
+                <a class="nav-link" href="staff.html" style="color:#A77979; font-size: large">Staff Data</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="item.html">E-commerce</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="animal.html">Animal Shop</a>
@@ -31,13 +34,13 @@
               <a class="nav-link" href="service.html">Services</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="reservation.html">Reservations</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="bacheca.html">Boards Management</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="location.html">Locations</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="staff.html" style="color: rgb(103, 73, 54); font-size: large">Staff Management</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#" onclick=logout()>Logout</a>
@@ -56,7 +59,7 @@
 
       <div class="input-group mb-2" style="margin-bottom: 6px;">
         <input type="search" class="form-control rounded" id="searchStaff" placeholder="Search by Name or Username" aria-label="Search" aria-describedby="search-addon">
-        <button type="button" class="btn" style="border-color: rgb(103, 73, 54);" onclick=searchByNameUsername()>search</button>
+        <button type="button" class="btn" style="border-color: #472D2D;" onclick=searchByNameUsername()>search</button>
       </div>
 
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4  row-cols-xl-5 g-4" id="myDIV">
