--- a/backOffice/user.html
+++ b/backOffice/user.html
@@ -14,7 +14,7 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: rgb(236, 227, 205);">
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #472D2D;">
       <div class="container-fluid">
         <a class="navbar-brand" href="home.html">Animal House</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -23,10 +23,13 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="user.html" style="color: rgb(103, 73, 54); font-size: large">Costumer Data</a>
+              <a class="nav-link" href="user.html" style="color: #A77979; font-size: large">Costumer Data</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="item.html">E-commerce Management</a>
+              <a class="nav-link" href="staff.html">Staff Data</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="item.html">E-commerce</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="animal.html">Animal Shop</a>
@@ -35,13 +38,13 @@
               <a class="nav-link" href="service.html">Services</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="reservation.html">Reservations</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="bacheca.html">Boards Management</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="location.html">Locations</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="staff.html">Staff Management</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#" onclick=logout()>Logout</a>
@@ -71,7 +74,7 @@
 
       <div class="input-group mb-2">
         <input type="search" class="form-control rounded" id="searchClient" placeholder="Search by Name or Username" aria-label="Search" aria-describedby="search-addon">
-        <button type="button" class="btn" style="border-color: rgb(103, 73, 54);" onclick=searchByNameUsername()>search</button>
+        <button type="button" class="btn" style="border-color: #472D2D;" onclick=searchByNameUsername()>search</button>
       </div>
 
       <!-- Modal -->
@@ -126,14 +129,12 @@
                   </div>
                 </div>
 
-                <div class="row">
-                  <div class="row mb-2">
-                    <label for="inputAdd" class="col-sm-3 col-form-label">Address</label>
-                    <div class="col-sm-9">
-                      <input type="address" class="form-control" id="inputAdd" placeholder="Address" aria-label="Residential address">
-                    </div>
-                  </div>                  
-                </div>
+                <div class="row mb-2">
+                  <label for="inputAdd" class="col-sm-3 col-form-label">Address</label>
+                  <div class="col-sm-9">
+                    <input type="address" class="form-control" id="inputAdd" placeholder="Address" aria-label="Residential address">
+                  </div>
+                </div> 
 
                 <div class="row mb-2">
                   <label for="inputPref" class="col-sm-3 col-form-label">Preferences*</label>
