--- a/backOffice/animal.html
+++ b/backOffice/animal.html
@@ -13,9 +13,9 @@
       <title>Animal Shop</title>
     </head>
     <body>
-      <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #472D2D;">
+      <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="home.html">Animal House</a>
+          <a class="navbar-brand" href="home.html" style="color: white;">Animal House</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -31,7 +31,7 @@
                 <a class="nav-link" href="item.html">E-commerce</a>
               </li>
               <li class="nav-animal">
-                <a class="nav-link" href="animal.html" style="color: white; font-size: large">Animal Shop</a>
+                <a class="nav-link" href="animal.html" style="color: white;font-size:large;">Animal Shop</a>
               </li>
               <li class="nav-animal">
                 <a class="nav-link" href="service.html">Services</a>
@@ -78,7 +78,7 @@
   
         <div class="input-group" style="margin-bottom: 6px;">
           <input type="search" class="form-control rounded" id="searchAnimal" placeholder="Search by Species or Breed" aria-label="Search" aria-describedby="search-addon">
-          <button type="button" class="btn" style="border-color: rgb(103, 73, 54);" onclick=searchBySpeciesBreed()>search</button>
+          <button type="button" class="btn" style="color: white; background-color: #A77979;" onclick=searchBySpeciesBreed()>search</button>
         </div>
   
         <!-- Modal -->
