--- a/backOffice/home.html
+++ b/backOffice/home.html
@@ -14,9 +14,9 @@ Servizi in presenza: per prenotare servizi in presenza, modificare o cancellare 
         <title>AnimalHouse</title>
     </head>
     <body>
-      <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #472D2D">
+      <nav class="navbar navbar-expand-lg navbar-dark" >
         <div class="container-fluid">
-          <a class="navbar-brand" href="home.html" style="color: white; font-size:x-large;">Animal House</a>
+          <a class="navbar-brand" href="home.html" style="color:white;font-size:x-large;">Animal House</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
