--- a/backOffice/location.html
+++ b/backOffice/location.html
@@ -10,9 +10,9 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #472D2D;">
+    <nav class="navbar navbar-expand-lg navbar-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="home.html">Animal House</a>
+        <a class="navbar-brand" href="home.html" style="color: white;">Animal House</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -40,7 +40,7 @@
               <a class="nav-link" href="bacheca.html">Boards Management</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="location.html" style="color: white; font-size: large">Locations</a>
+              <a class="nav-link" href="location.html" style="color: white;font-size: large">Locations</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#" onclick=logout()>Logout</a>
@@ -57,7 +57,7 @@
 
       <div class="input-group mt-1" style="margin-bottom: 6px;">
         <input type="search" class="form-control rounded" id="searchLocation" placeholder="Search by Name" aria-label="Search" aria-describedby="search-addon">
-        <button type="button" class="btn " style="border-color: rgb(103, 73, 54);" onclick=searchByName()>search</button>
+        <button type="button" class="btn " style="color: white; background-color: #A77979;" onclick=searchByName()>search</button>
       </div>
 
       <div  id="myDIV" class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4">
