--- a/backOffice/staff.html
+++ b/backOffice/staff.html
@@ -10,9 +10,9 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light " style="background-color: #472D2D;">
+    <nav class="navbar navbar-expand-lg navbar-dark ">
       <div class="container-fluid">
-        <a class="navbar-brand" href="home.html">Animal House</a>
+        <a class="navbar-brand" href="home.html" style="color: white;">Animal House</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -22,7 +22,7 @@
               <a class="nav-link" href="user.html">Costumer Data</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="staff.html" style="color:#A77979; font-size: large">Staff Data</a>
+                <a class="nav-link" href="staff.html" style="color: white;font-size: large">Staff Data</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="item.html">E-commerce</a>
@@ -59,7 +59,7 @@
 
       <div class="input-group mb-2" style="margin-bottom: 6px;">
         <input type="search" class="form-control rounded" id="searchStaff" placeholder="Search by Name or Username" aria-label="Search" aria-describedby="search-addon">
-        <button type="button" class="btn" style="border-color: #472D2D;" onclick=searchByNameUsername()>search</button>
+        <button type="button" class="btn" style="color: white; background-color: #A77979;" onclick=searchByNameUsername()>search</button>
       </div>
 
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4  row-cols-xl-5 g-4" id="myDIV">
