--- a/backOffice/bacheca.html
+++ b/backOffice/bacheca.html
@@ -7,9 +7,9 @@
     <title>Boards Management</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #472D2D;">
+    <nav class="navbar navbar-expand-lg navbar-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="home.html">Animal House</a>
+        <a class="navbar-brand" href="home.html" style="color: white;">Animal House</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -34,7 +34,7 @@
               <a class="nav-link" href="reservation.html">Reservations</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="bacheca.html" style="color: white; font-size: large">Boards Management</a>
+              <a class="nav-link" href="bacheca.html" style="color: white;font-size: large">Boards Management</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="location.html">Locations</a>
