--- a/backOffice/item.html
+++ b/backOffice/item.html
@@ -13,9 +13,9 @@
     <title>E-commerce</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #472D2D;">
+    <nav class="navbar navbar-expand-lg navbar-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="home.html">Animal House</a>
+        <a class="navbar-brand" href="home.html" style="color: white;">Animal House</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -82,7 +82,7 @@
 
       <div class="input-group" style="margin-bottom: 6px;">
         <input type="search" class="form-control rounded" id="searchItem" placeholder="Search by Name" aria-label="Search" aria-describedby="search-addon">
-        <button type="button" class="btn" style="border-color: rgb(103, 73, 54);" onclick=searchByName()>search</button>
+        <button type="button" class="btn" style="color: white; background-color: #A77979;" onclick=searchByName()>search</button>
       </div>
 
       <!-- Modal -->
