--- a/backOffice/reservation.html
+++ b/backOffice/reservation.html
@@ -8,9 +8,9 @@
         <title>Reservations</title>
     </head>
     <body>
-      <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #472D2D;">
+      <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="home.html">Animal House</a>
+            <a class="navbar-brand" href="home.html" style="color: white;">Animal House</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -32,7 +32,7 @@
                 <a class="nav-link" href="service.html">Services</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="reservation.html" style="color: #A77979; font-size: large">Reservations</a>
+                <a class="nav-link" href="reservation.html" style="color: white;font-size: large">Reservations</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="bacheca.html">Boards Management</a>
@@ -57,7 +57,7 @@
 
         <div class="input-group mb-2" style="margin-bottom: 6px;">
             <input type="search" class="form-control rounded" id="searchReservation" placeholder="Search by Service name or Client name" aria-label="Search" aria-describedby="search-addon">
-            <button type="button" class="btn" style="border-color: #472D2D;" onclick=searchByServiceUsername()>search</button>
+            <button type="button" class="btn" style="color: white; background-color: #A77979;" onclick=searchByServiceUsername()>search</button>
         </div>
 
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4  g-4" id="myDIV">
