--- a/backOffice/service.html
+++ b/backOffice/service.html
@@ -13,9 +13,9 @@
     <title>Services</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #472D2D;">
+    <nav class="navbar navbar-expand-lg navbar-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="home.html">Animal House</a>
+        <a class="navbar-brand" href="home.html" style="color: white;">Animal House</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -34,7 +34,7 @@
               <a class="nav-link" href="animal.html">Animal Shop</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="service.html" style="color: #A77979; font-size: large">Services</a>
+              <a class="nav-link" href="service.html" style="color: white; font-size: large">Services</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="reservation.html">Reservations</a>
@@ -59,7 +59,7 @@
           <h2 id="serviceTitle" class="mt-2" style="text-align: left; margin-right:10px; display: inline-block;">All Services</h2>
 
           <div class="dropdown dropdown-bg-red" style="display: inline-block;">
-            <button class="btn dropdown-toggle mb-1" type="button"  style="border-color:rgb(180, 179, 179); margin-right: 5px;" data-bs-toggle="dropdown" aria-expanded="false">
+            <button class="btn dropdown-toggle mb-1" type="button"  style="color: white; background-color: #A77979; margin-right: 5px;" data-bs-toggle="dropdown" aria-expanded="false">
               Mode
             </button>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1" id="modeService">
