--- a/backOffice/bacheca.html
+++ b/backOffice/bacheca.html
@@ -115,8 +115,8 @@
                   </form> 
                 </div>
                 <div class="col-md-1">
-                  <button type="button" style="float:right; margin:1px;" class="btn btn-success" onclick=createPost()>Post</button>
-                  <button type="reset" id="btn_x" form="FormPost" style="float:right; margin:1px;" class="btn btn-danger">X</button>
+                  <button type="button" style="float:right; margin:1px;background-color: #849531;color:white;" class="btn" onclick=createPost() >Post</button>
+                  <button type="reset" id="btn_x" form="FormPost" style="float:right; margin:1px;background-color: #A0AECD; border-color: #A0AECD; color:white;" class="btn">X</button>
                 </div>
                
               </div>
