--- a/backOffice/order.html
+++ b/backOffice/order.html
@@ -9,9 +9,9 @@
     <title>Orders</title>
   </head>
 
-  <body style="background-color: #A77979;">
+  <body style="background-color: #A0AECD;">
     <div  class="container" > 
-      <p class="mt-2" id="titlePag" class="my-2 mx-2" style="font-size: 25px; text-align: center;" ></p>
+      <p class="mt-2" id="titlePag" class="my-2 mx-2" style="font-size: 25px; text-align: center;color:#425664;" ></p>
 
 
       <div  class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-3 " id="myDIV" >
