--- a/backOffice/staff.html
+++ b/backOffice/staff.html
@@ -59,7 +59,7 @@
 
       <div class="input-group mb-2" style="margin-bottom: 6px;">
         <input type="search" class="form-control rounded" id="searchStaff" placeholder="Search by Name or Username" aria-label="Search" aria-describedby="search-addon">
-        <button type="button" class="btn" style="color: white; background-color: #A77979;" onclick=searchByNameUsername()>search</button>
+        <button type="button" class="btn" style="color: white; background-color: #425664;" onclick=searchByNameUsername()>search</button>
       </div>
 
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4  row-cols-xl-5 g-4" id="myDIV">
