--- a/backOffice/user.html
+++ b/backOffice/user.html
@@ -65,7 +65,7 @@
         <div class="col">
           <!-- Button trigger modal -->
           <div class="mb-2 mt-2" style="display: flex; justify-content: right; align-items: right;">
-            <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#Modal" style="color: white; background-color: #f56ea5;" >
+            <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#Modal" style="color: white; background-color: #849531;" >
               Register a new customer
             </button>
           </div>
@@ -74,7 +74,7 @@
 
       <div class="input-group mb-2">
         <input type="search" class="form-control rounded" id="searchClient" placeholder="Search by Name or Username" aria-label="Search" aria-describedby="search-addon">
-        <button type="button" class="btn" style="color: white; background-color: #A77979;" onclick=searchByNameUsername()>search</button>
+        <button type="button" class="btn" style="color: white; background-color: #425664;" onclick=searchByNameUsername()>search</button>
       </div>
 
       <!-- Modal -->
@@ -154,8 +154,8 @@
               </form>
               </div>
               <div class="modal-footer">
-                <button type="reset" form="FormClient" class="btn btn-secondary" data-bs-dismiss="modal">Discard</button>
-                <button type="button" class="btn btn-primary" onclick=createClient()>Save new client</button>
+                <button type="reset" form="FormClient" class="btn" data-bs-dismiss="modal" style="background-color: #A0AECD; border-color: #A0AECD;">Discard</button>
+                <button type="button" class="btn" onclick=createClient() style="background-color: #849531; border-color: #849531;">Save new client</button>
               </div>
 
             </div>
