--- a/backOffice/location.html
+++ b/backOffice/location.html
@@ -57,7 +57,7 @@
 
       <div class="input-group mt-1" style="margin-bottom: 6px;">
         <input type="search" class="form-control rounded" id="searchLocation" placeholder="Search by Name" aria-label="Search" aria-describedby="search-addon">
-        <button type="button" class="btn " style="color: white; background-color: #A77979;" onclick=searchByName()>search</button>
+        <button type="button" class="btn " style="background-color: #425664; border-color: #425664; color:white;" onclick=searchByName()>search</button>
       </div>
 
       <div  id="myDIV" class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4">
