--- a/backOffice/service.html
+++ b/backOffice/service.html
@@ -46,7 +46,25 @@
               <a class="nav-link" href="location.html">Locations</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#" onclick=logout()>Logout</a>
+              <a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#ModalS">Logout</a>
+                <!-- Modal -->
+                <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+
+                    <div class="modal fade" id="ModalS" tabindex="-1" aria-labelledby="ModalLabel" aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content" style="background-color:#A0AECD;color: white;">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="ModalLabel">Are you sure you want to logout?</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" form="FormModify" class="btn" style="background-color: #425664; border-color: #425664; color:white" data-bs-dismiss="modal" >No</button>
+                                <button type="button" class="btn" style="margin:1px;background-color: #849531;color: white;" onclick=logout()>Yes</button>                             
+                            </div>
+                            </div>
+                        </div>
+                    </div>
+                  </div>
             </li>
           </ul>
         </div>
@@ -77,7 +95,7 @@
         </div>
         <div class="col">
           <div class="mb-2 mt-2" style="display: flex; justify-content: right; align-items: right;">
-            <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#Modal" style="background-color: #849531; border-color: #849531;">
+            <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#Modal" style="background-color: #849531; border-color: #849531; color: white">
               Register a new service
             </button>
           </div>
@@ -103,6 +121,10 @@
 
               <!-- Body -->
               <div class="modal-body">
+                <div class="callout" id="callout" style="display: none;">
+                  <div class="callout-header"></div>
+                  <span class="closebtn" onclick="this.parentElement.style.display='none';">×</span>
+              </div>
                 <form id="FormPost">
 
                   <div class="row mb-2">
@@ -208,6 +230,8 @@
       </div>   
 
     </div>
+
+    
 
     <script src="service.js"></script>
     <script src="image.js"></script> 
