--- a/backOffice/user.html
+++ b/backOffice/user.html
@@ -47,7 +47,25 @@
               <a class="nav-link" href="location.html">Locations</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#" onclick=logout()>Logout</a>
+              <a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#Modal">Logout</a>
+                <!-- Modal -->
+                <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+
+                    <div class="modal fade" id="Modal" tabindex="-1" aria-labelledby="ModalLabel" aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content" style="background-color:#A0AECD;color: white;">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="ModalLabel">Are you sure you want to logout?</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="reset" form="FormModify-${staff._id}" class="btn" style="background-color: #425664; border-color: #425664; color:white" data-bs-dismiss="modal" >No</button>
+                                <button type="button" class="btn" style="margin:1px;background-color: #849531;color: white;" onclick=logout()>Yes</button>                             
+                            </div>
+                            </div>
+                        </div>
+                    </div>
+                  </div>
             </li>
           </ul>
         </div>
@@ -65,7 +83,7 @@
         <div class="col">
           <!-- Button trigger modal -->
           <div class="mb-2 mt-2" style="display: flex; justify-content: right; align-items: right;">
-            <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#Modal" style="color: white; background-color: #849531;" >
+            <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#ModalNEW" style="color: white; background-color: #849531;" >
               Register a new customer
             </button>
           </div>
@@ -80,7 +98,7 @@
       <!-- Modal -->
       <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
 
-        <div class="modal fade" id="Modal" tabindex="-1" aria-labelledby="ModalLabel" aria-hidden="true">
+        <div class="modal fade" id="ModalNEW" tabindex="-1" aria-labelledby="ModalLabelNEW" aria-hidden="true">
           <div class="modal-dialog">
             <div class="modal-content">
               <div class="modal-header">
@@ -90,6 +108,10 @@
 
               <!-- Body -->
               <div class="modal-body">
+                <div class="callout" id="callout" style="display: none;">
+                  <div class="callout-header"></div>
+                  <span class="closebtn" onclick="this.parentElement.style.display='none';">×</span>
+                </div>
               <form id="FormClient">
                 <div class="row mb-2">
                   <label class="col-sm-2 col-form-label">Name</label>
