--- a/backOffice/location.html
+++ b/backOffice/location.html
@@ -85,7 +85,7 @@
       
     </div>
     
-    <div class="callout" id="callout" style="display: none;">
+    <div class="callout" id="callout1" style="display: none;">
       <div class="callout-header">You can't modify this location</div>
       <span class="closebtn" onclick="this.parentElement.style.display='none';">×</span>
     </div>
